--- a/styles/youtube/catppuccin.user.less
+++ b/styles/youtube/catppuccin.user.less
@@ -597,8 +597,7 @@
     }
 
     .yt-spec-button-shape-next--disabled {
-      background-color: fade(@overlay0, 50%);
-      color: @subtext0;
+      color: @overlay1;
     }
 
     .yt-spec-button-shape-next--overlay {
