fix(google-gemini): theme surface-bright instead of directly targeting chatbox

--- a/styles/google-gemini/catppuccin.user.less
+++ b/styles/google-gemini/catppuccin.user.less
@@ -189,6 +189,7 @@
     --gem-sys-color--primary-fixed: @text;
     --gem-sys-color--on-secondary: fade(@accent, 30%);
     --gem-sys-color--surface-variant: @surface0;
+    --gem-sys-color--surface-bright: @surface0;
 
     --og-theme-color: @text;
 
@@ -353,11 +354,6 @@
     }
     input-container::before {
       background: unset;
-    }
-      
-    /* Gemini chat input */
-    .discovery-feed-theme {
-        background-color: @surface0;
     }
   }
 }
