--- a/styles/google-gemini/catppuccin.user.less
+++ b/styles/google-gemini/catppuccin.user.less
@@ -189,6 +189,7 @@
     --gem-sys-color--primary-fixed: @text;
     --gem-sys-color--on-secondary: fade(@accent, 30%);
     --gem-sys-color--surface-variant: @surface0;
+    --gem-sys-color--surface-bright: @surface0;
 
     --og-theme-color: @text;
 
