Do NOT break this again. Moving stuff to lib/mediawiki to better organise miniserve in the meantime. Remove unnecessary note now that issue has been patched.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/archlinux/catppuccin.user.less
+++ b/styles/archlinux/catppuccin.user.less
@@ -16,7 +16,7 @@
 ==/UserStyle== */
 
 @import "https://userstyles.catppuccin.com/lib/lib.less";
-@import "http://127.0.0.1:8000/mediawiki.less";
+@import "http://127.0.0.1:8000/lib/mediawiki.less";
 
 /* deno-fmt-ignore */
 @-moz-document regexp("^https:\\/\\/(?:[-a-zA-Z0-9@:%_+.~#?&\\/=]*\\.)?(?<!gitlab\\.)archlinux\\.org\\/?[-a-zA-Z0-9@:%_+.~#?&\\/=]*") {
